--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Blog</title>
-</head>
-<body>
-	<h1>{{ title }}</h1>
+{% extends "base.html" %}
 
-		{{ instance.title }} <br>
-		{{ instance.content }} <br>
-		{{ instance.timestamp }} <br>
-		{{ instance.updated }} <br>
-		{{ instance.id }} <br>
+{% block head_title %}
+{{ instance.title }} | {{ block.super }}
+{% endblock head_title %}
 
-</body>
-</html>
+{% block content %}
+
+
+<h1>{{ title }}</h1>
+
+{{ instance.title }} <br>
+{{ instance.content }} <br>
+{{ instance.timestamp }} <br>
+{{ instance.updated }} <br>
+{{ instance.id }} <br>
+
+{% endblock content %} 
