--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Blog</title>
-</head>
-<body>
-	<h1>Form</h1>
+{% extends "base.html" %}
 
-	<form method="POST" action="">{% csrf_token %}
-		{{ form.as_p }}
+{% block content %}
 
-		<input type="submit" value="Creat Post">
-	</form>
+<h1>Form</h1>
 
-</body>
-</html>
+<form method="POST" action="">{% csrf_token %}
+	{{ form.as_p }}
+
+	<input type="submit" value="Creat Post">
+</form>
+
+{% endblock content %}
