--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -2,16 +2,26 @@
 
 {% block content %}	
 		
-<h1>{{ title }} is working!</h1>
 
-{{ object_list }}
+<div class="col-sm-8 col-sm-offset-3">
 
-{% for obj in object_list %}
-	<a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> <br>
-	{{ obj.content }} <br>
-	{{ obj.timestamp }} <br>
-	{{ obj.updated }} <br>
-	{{ obj.id }} <br>
-{% endfor %}
+	<h1>{{ title }}</h1>
+
+	{% for obj in object_list %}
+		<div class="row">
+			<div class="card text-center" style="width: 28rem;">
+			  <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+			  <div class="card-body">
+			    <h5 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> </h5>
+			    <small>{{ obj.timestamp|timesince }} ago</small>
+			    <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
+			    <a href="#" class="btn btn-primary">Read</a>
+			  </div>
+			</div>
+		</div>
+		<br>
+	{% endfor %}
+	
+</div>
 
 {% endblock content %}
