--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load urlify %}
 
 {% block head_title %}
     {{ instance.title }} | {{ block.super }}
@@ -12,8 +13,16 @@
             <img src="{{ instance.image.url }}" class="img-responsive">
         {% endif %}
         <h1>{{ title }}
-            <small>{{ instance.timestamp }}</small>
+            <small>{{ instance.timestamp|timesince }}</small>
         </h1>
+
+        <a href="https://w ww.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
+            Facebook
+        </a>
+
+        <a href="https://twitter.com/home?status={{ instance.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">
+            Twitter
+        </a>
 
         {{ instance.content | linebreaks }} <br>
 
