--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -13,19 +13,39 @@
             <img src="{{ instance.image.url }}" class="img-responsive">
         {% endif %}
         <h1>{{ title }}
-            <small>{{ instance.timestamp|timesince }}</small>
+            <small>{{ instance.timestamp }}</small>
         </h1>
+        {% if object.user.get_full_name %}
+            <p>Author: {{ object.user.get_full_name }}</p>
+        {% endif %}
 
-        <a href="https://w ww.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
-            Facebook
-        </a>
+        <p>
+        <div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="standard"
+             data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+        <hr/>
+        </p>
 
-        <a href="https://twitter.com/home?status={{ instance.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">
-            Twitter
-        </a>
+        {#        <p>#}
+        {#            <a href="https://w ww.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">#}
+        {#                Facebook#}
+        {#            </a>#}
+        {##}
+        {#            <a href="https://twitter.com/home?status={{ instance.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">#}
+        {#                Twitter#}
+        {#            </a>#}
+        {#        </p>#}
 
-        {{ instance.content | linebreaks }} <br>
+        <div class='row'>
+            <div class='col-sm-12'>
 
+                {{ instance.content|linebreaks }}
+
+                <hr/>
+                <br/>
+
+                <div class="fb-comments" data-href="{{ request.build_absolute_uri }}"></div>
+            </div>
+        </div>
     </div>
 
 {% endblock content %} 
