--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -16,6 +16,7 @@
                     <!-- <img  src=".../100px180/" alt="Card image cap"> -->
                     <div class="card-body">
                         <h5 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h5>
+                        {% if obj.user.get_full_name %}<p>Author: {{ obj.user.get_full_name }}</p>{% endif %}
                         <small>{{ obj.timestamp|timesince }} ago</small>
                         <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
                         <a href="#" class="btn btn-primary">Read</a>
