--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -13,7 +13,8 @@
             <img src="{{ instance.image.url }}" class="img-responsive">
         {% endif %}
         <h1>{{ title }}
-            <small>{{ instance.timestamp }}</small>
+            <small>{% if instance.draft %}<span style='color:red;'>Draft</span> {% endif %}{{ instance.publish }}
+            </small>
         </h1>
         {% if object.user.get_full_name %}
             <p>Author: {{ object.user.get_full_name }}</p>
@@ -24,16 +25,6 @@
              data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
         <hr/>
         </p>
-
-        {#        <p>#}
-        {#            <a href="https://w ww.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">#}
-        {#                Facebook#}
-        {#            </a>#}
-        {##}
-        {#            <a href="https://twitter.com/home?status={{ instance.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">#}
-        {#                Twitter#}
-        {#            </a>#}
-        {#        </p>#}
 
         <div class='row'>
             <div class='col-sm-12'>
