--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -9,23 +9,26 @@
 
         {% for obj in object_list %}
             <div class="row">
-                <div class="card text-center" style="width: 28rem;">
-                    {% if obj.image %}
-                        <img src="{{ obj.image.url }}" class="card-img-top img-responsive">
-                    {% endif %}
-                    <!-- <img  src=".../100px180/" alt="Card image cap"> -->
-                    <div class="card-body">
-                        <h5 class="card-title"><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h5>
-                        {% if obj.user.get_full_name %}<p>Author: {{ obj.user.get_full_name }}</p>{% endif %}
-                        <small>{{ obj.timestamp|timesince }} ago</small>
-                        <p class="card-text">{{ obj.content|linebreaks|truncatechars:120 }}</p>
-                        <a href="#" class="btn btn-primary">Read</a>
+                <div class="col-sm-12">
+                    <div class="thumbnail">
+                        {% if obj.image %}
+                            <img src='{{ obj.image.url }}' class='img-responsive'/>
+                        {% endif %}
+                        <div class="caption">
+                            {% if obj.draft %}<h3>Staff only: Draft</h3>{% endif %} {% if obj.publish > today %}
+                            <h3>Staff Only: Future Post</h3>{% endif %}
+                            <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a>
+                                <small>{{ obj.publish }}</small>
+                            </h3>
+                            {% if obj.user.get_full_name %}<p>Author: {{ obj.user.get_full_name }}</p>{% endif %}
+                            <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                            <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+                        </div>
                     </div>
                 </div>
+                <hr/>
             </div>
-            <br>
         {% endfor %}
-
 
         <div class="pagination">
 	    <span class="step-links">
