--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -7,6 +7,11 @@
 
         <h1>{{ title }}</h1>
 
+        <form method='GET' action=''>
+            <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>
+            <input type='submit' value='Search'/>
+        </form>
+
         {% for obj in object_list %}
             <div class="row">
                 <div class="col-sm-12">
@@ -31,21 +36,21 @@
         {% endfor %}
 
         <div class="pagination">
-	    <span class="step-links">
-	        {% if object_list.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ object_list.previous_page_number }}">previous</a>
-            {% endif %}
+            <span class="step-links">
+                {% if object_list.has_previous %}
+                    <a href="?{{ page_request_var }}=
+                            {{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
+                {% endif %}
 
-            <span class="current">
-	            Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
-	        </span>
+                <span class="current">
+                    Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+                </span>
 
-            {% if object_list.has_next %}
-                <a href="?page={{ object_list.next_page_number }}">next</a>
-                <a href="?page={{ object_list.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-	    </span>
+                {% if object_list.has_next %}
+                    <a href="?{{ page_request_var }}=
+                            {{ object_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>
+                {% endif %}
+            </span>
         </div>
 
 
