--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,41 +1,56 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block content %}
 
-
-    <div class="col-sm-8 col-sm-offset-3">
-
-        <h1>{{ title }}</h1>
-
-        <form method='GET' action=''>
-            <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>
-            <input type='submit' value='Search'/>
-        </form>
-
-        {% for obj in object_list %}
+    <!-- Page Header -->
+    <header class="masthead" style="background-image: url('{% static "img/home-bg.jpg" %}')">
+        <div class="overlay"></div>
+        <div class="container">
             <div class="row">
-                <div class="col-sm-12">
-                    <div class="thumbnail">
-                        {% if obj.image %}
-                            <img src='{{ obj.image.url }}' class='img-responsive'/>
-                        {% endif %}
-                        <div class="caption">
-                            {% if obj.draft %}<h3>Staff only: Draft</h3>{% endif %} {% if obj.publish > today %}
-                            <h3>Staff Only: Future Post</h3>{% endif %}
-                            <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a>
-                                <small>{{ obj.publish }}</small>
-                            </h3>
-                            {% if obj.user.get_full_name %}<p>Author: {{ obj.user.get_full_name }}</p>{% endif %}
-                            <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
-                            <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
-                        </div>
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>My Personal Blog</h1>
+                        <span class="subheading">This is my home!</span>
                     </div>
                 </div>
-                <hr/>
             </div>
-        {% endfor %}
+        </div>
+    </header>
 
-        <div class="pagination">
+    <!-- Main Content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="post-preview">
+                    <div class="col-sm-8 col-sm-offset-3">
+
+                        {#        <form method='GET' action=''>#}
+                        {#            <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>#}
+                        {#            <input type='submit' value='Search'/>#}
+                        {#        </form>#}
+
+                        {% for obj in object_list %}
+                            {#            {% if obj.image %}#}
+                            {#                <img src='{{ obj.image.url }}' class='img-responsive'/>#}
+                            {#            {% endif %}#}
+                            <h2 class="post-title">
+                                <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a>
+                                </h3>
+                            </h2>
+                            <h3 class="post-subtitle">
+                                {% if obj.draft %}<h3 style="color: red">Staff only: Draft</h3>{% endif %}
+                                {% if obj.publish > today %}
+                                    <h3>Staff Only: Future Post</h3>{% endif %}
+                                <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                            </h3>
+                            <p class="post-meta">Posted by <em>
+                                {% if obj.user.get_full_name %}{{ obj.user.get_full_name }}{% endif %}</em>
+                                {{ obj.publish }} </p>
+
+                        {% endfor %}
+
+                        <div class="pagination">
             <span class="step-links">
                 {% if object_list.has_previous %}
                     <a href="?{{ page_request_var }}=
@@ -51,9 +66,16 @@
                             {{ object_list.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">next</a>
                 {% endif %}
             </span>
+                        </div>
+
+
+                    </div>
+
+                </div>
+                <hr>
+
+            </div>
         </div>
-
-
     </div>
 
 {% endblock content %}
