--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
     </div>
 </nav>
 
-{% include "messages_display.html" %}
+{#{% include "messages_display.html" %}#}
 
 {% block content %}
 
@@ -99,12 +99,6 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                  </span>
-                        </a>
                     </li>
                 </ul>
                 <p class="copyright text-muted">Copyright &copy; Wessam Kayid 2018</p>
