--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,42 +1,61 @@
 {% extends "base.html" %}
 {% load urlify %}
-
-{% block head_title %}
-    {{ instance.title }} | {{ block.super }}
-{% endblock head_title %}
+{% load staticfiles %}
 
 {% block content %}
 
+    <!-- Page Header -->
+    <header class="masthead" style="background-image: url('{{ instance.image.url }}')">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="post-heading">
+                        <h1>{{ instance.title }}</h1>
 
-    <div class='col-sm-6 col-sm-offset-3'>
-        {% if instance.image %}
-            <img src="{{ instance.image.url }}" class="img-responsive">
-        {% endif %}
-        <h1>{{ title }}
-            <small>{% if instance.draft %}<span style='color:red;'>Draft</span> {% endif %}{{ instance.publish }}
-            </small>
-        </h1>
-        {% if object.user.get_full_name %}
-            <p>Author: {{ object.user.get_full_name }}</p>
-        {% endif %}
+                        <h2 class="subheading">
+                            <small>{% if instance.draft %}
+                                <span style='color:red;'>Draft</span> {% endif %}
+                            </small>
+                        </h2>
 
-        <p>
-        <div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="standard"
-             data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
-        <hr/>
-        </p>
-
-        <div class='row'>
-            <div class='col-sm-12'>
-
-                {{ instance.content|linebreaks }}
-
-                <hr/>
-                <br/>
-
-                <div class="fb-comments" data-href="{{ request.build_absolute_uri }}"></div>
+                        <span class="meta">Posted by
+                <a href="#">{% if object.user.get_full_name %}
+                    {{ object.user.get_full_name }}
+                {% endif %}</a>
+                            {{ instance.publish }}</span>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </header>
+
+    <!-- Post Content -->
+    <article>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+
+                    {{ instance.content|linebreaks }}
+
+
+                    <hr/>
+                    <p>
+                    <div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="standard"
+                         data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+                    </p>
+
+                    <hr/>
+                    <br/>
+
+                    <div class="fb-comments" data-href="{{ request.build_absolute_uri }}"></div>
+
+
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <hr>
 
 {% endblock content %} 
