--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -25,25 +25,25 @@
                 <div class="post-preview">
                     <div class="col-sm-8 col-sm-offset-3">
 
-                        {#        <form method='GET' action=''>#}
-                        {#            <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>#}
-                        {#            <input type='submit' value='Search'/>#}
-                        {#        </form>#}
+{#                        <form method='GET' action=''>#}
+{#                            <input type='text' name='q' placeholder='Search posts' value='{{ request.GET.q }}'/>#}
+{#                            <input type='submit' value='Search'/>#}
+{#                        </form>#}
 
                         {% for obj in object_list %}
-                            {#            {% if obj.image %}#}
-                            {#                <img src='{{ obj.image.url }}' class='img-responsive'/>#}
-                            {#            {% endif %}#}
+
                             <h2 class="post-title">
                                 <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a>
                                 </h3>
                             </h2>
-                            <h3 class="post-subtitle">
+
+                            <h6 class="post-subtitle">
                                 {% if obj.draft %}<h3 style="color: red">Staff only: Draft</h3>{% endif %}
                                 {% if obj.publish > today %}
                                     <h3>Staff Only: Future Post</h3>{% endif %}
-                                <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
-                            </h3>
+                                <em>{{ obj.content|truncatechars:120 }}</em>
+                            </h6>
+
                             <p class="post-meta">Posted by <em>
                                 {% if obj.user.get_full_name %}{{ obj.user.get_full_name }}{% endif %}</em>
                                 {{ obj.publish }} </p>
@@ -54,6 +54,7 @@
             <span class="step-links">
                 {% if object_list.has_previous %}
                     <a href="?{{ page_request_var }}=
+
                             {{ object_list.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
                 {% endif %}
 
