Add rich text editor

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
 
-                    {{ instance.content|linebreaks }}
+                    {{ instance.content|linebreaks|safe }}
 
 
                     <hr/>
