--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,10 @@
         {% endblock style %}
     </style>
 
+    <!--Tinymce Text-Editor (Must be in Head Tag) -->
+    <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/tinymce/custom.js' %}"></script>
+
 </head>
 
 <body>
